fix overflow on mobile, also fuck up the background image so it is now more abstract but honestly better

--- a/style.css
+++ b/style.css
@@ -11,11 +11,16 @@ html,body
     margin: 0;
     /* margin-top: 65px;  | remove this when I put the navbar back in (.nav)*/
     width: 100%;
-    background: url("./img/mountain.jpg");
     background-size: cover;
     height: 100%;
     text-align: center;
+    /* padding-bottom: 5%; */
+}
+
+.wrapper section {
     padding-top: 5%;
+    padding-bottom: 5%;
+    background: url("./img/mountain.jpg");
 }
   
 .inner{
@@ -86,7 +91,7 @@ p strong {
 
     .wrapper{
         height: 100vh;
-        padding:0;
+        /* padding-bottom:100px; */
     }
 }
 
